--- a/style.css
+++ b/style.css
@@ -1,45 +1,73 @@
 @import url('https://fonts.googleapis.com/css2?family=Barlow:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap');
 
+:root{
+    --cor-primaria : #000000;
+    --cor-secundaria : #FFFFFF;
+    --cor-terciaria : #2681D6;
+    --cor-hover: #272727;
+
+
+    --font-primaria : "Barlow", serif;
+    --font-secundaria : "Montserrat", sans-serif;
+}
+
 *{
     margin: 0;
     padding: 0;
 }
 
 body{
-    height: 100vh;
     box-sizing: border-box;
-    background-color: #000000;
-    color: #FFFFFF;
+    background-color: var(--cor-primaria);
+    color: var(--cor-secundaria);
+}
+
+.cabecalho{
+    padding: 5% 0 0 15%;
+}
+
+.cabecalho__menu{
+    display: flex;
+    gap: 60px;
+}
+
+.cabecalho__menu__link{
+    font-family: var(--font-secundaria);
+    font-weight: 600;
+    font-size: 1.5rem;
+    text-decoration: none;
+    color: var(--cor-terciaria);
 }
 
 .apresentacao{
+    padding: 5% 15%;
     display: flex;
     align-items: center;
     justify-content: space-between;
-    margin: 10% 16%;
+    gap : 83px;
 }
 
 .apresentacao__conteudo{
     display: flex;
-    width: 688px;
+    width: 60%;
     flex-direction: column;
     gap: 50px;
 }
 
 .apresentacao__conteudo__titulo{
-    font-size: 36px;
-    font-family: "Barlow", serif;
+    font-size: 2.25rem;
+    font-family: var(--font-primaria);
     font-weight: 700;
 }
 
 .apresentacao__conteudo__texto{
-    font-size: 24px;
-    font-family: "Montserrat", serif;
+    font-size: 1.5rem;
+    font-family: var(--font-secundaria);
     font-weight: 400;
 }
 
 .titulo__destaque{
-    color: #22D4FD;
+    color: var(--cor-terciaria);
 }
 
 .apresentacao__conteudo__botoes{
@@ -47,20 +75,61 @@ body{
     justify-content: space-between;
 }
 
-.apresentacao__conteudo__botao{
-    background-color: #22D4FD;
-    color: #000000;
-    text-decoration: none;
-    width: 295px;
-    padding: 25px 0;
-    text-align: center;
-    border-radius: 20px;
+.apresentacao__conteudo__botoes__botao{
 
-    font-family: "Montserrat", serif;
+    display: flex;
+    justify-content: center;
+    align-items: flex-end;
+    border: 3px solid var(--cor-terciaria);
+    padding: 25px 0;
+    width: 45%;
+    border-radius: 20px;
+    gap: 16px;
+
+    color: var(--cor-secundaria);
+    font-family: var(--font-secundaria);
     font-weight: 600;
-    font-size: 24px;
+    font-size: 1.5rem;
+    text-align: center;
+    text-decoration: none;
+}
+
+.apresentacao__conteudo__botoes__botao:hover{
+    background-color: var(--cor-hover);
 }
 
 .apresentacao__imagem{
-    border-radius: 20px;
+    width: 40%;
+}
+
+.rodape{
+    background-color: var(--cor-terciaria);
+    padding: 35px;
+    font-family: var(--font-secundaria);
+    font-weight: 600;
+    text-align: center;
+    font-size: 1.5rem;
+}
+
+@media (max-width: 1100px){
+
+    .cabecalho{
+        padding: 10%;
+    }
+
+    .cabecalho__menu{
+        justify-content: center;
+    }
+    .apresentacao{
+        flex-direction: column;
+        padding: 5%;
+    }
+    .apresentacao__conteudo{
+        width: auto;
+    }
+    
+
+    .apresentacao__imagem{
+        width: 50%;
+    }
 }
