--- a/style.css
+++ b/style.css
@@ -114,7 +114,7 @@ body{
 @media (max-width: 1100px){
 
     .cabecalho{
-        padding: 20%;
+        padding: 20% 0 20% 0;
     }
 
     .cabecalho__menu{
